--- a/.github/workflows/am_regression.yml
+++ b/.github/workflows/am_regression.yml
@@ -22,12 +22,9 @@ jobs:
   playwright:
     name: Regression tests
     runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/playwright/python:latest
     env:
       API_KEY: ${{ secrets.API_KEY_QA }}
       PROD_LOGIN1: ${{ secrets.PROD_LOGIN }}
-      PROD_PW1: ${{ secrets.PROD_PW }}
 #      TEST_IT_TOKEN: ${{ secrets.TEST_IT_TOKEN }}
     strategy:
       matrix:
@@ -50,4 +47,4 @@ jobs:
             export args='${{github.event.inputs.arguments}}'
           fi
             echo "::set-output name=env_name::${ENV:-prod}"
-            pytest ${args}
+            pytest
