--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ requests~=2.32.3
 virtualenv==20.25.1
 Faker~=26.0.0
 python-dotenv~=1.0.1
+testit-adapter-pytest
+testit-api-client
+testit-python-commons
